# deep-image-matching

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.txt  LICENSE  LICENSE.txt  README.md  belv_sp+lg.ipynb  camera_calib.xml  config.py  config.yaml  deep_image_matching.ipynb  demo.ipynb  demo.py  demo_sfm_pipeline.ipynb  demo_simple.ipynb  demo_step_by_step.ipynb  dummy.py  ext_config.py  georeference_by_gcp.ipynb  join_databases.py  main.py  main_casalbagliano.py  mkdocs.yml  notes.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run.bat  run.sh  run_casalbagliano.sh  run_dense_and_triangulate_pycolmap.ipynb  run_ncc.py  run_sfm+dense.sh  (+4 more)
.github/workflows/: build-package.yml  code-quality.yaml  deploy-docs.yaml  publish-to-pypi.yml  publish-to-test-pypi.yml  run_lint_format.yml  run_test.yml  run_test_win.yml  run_tests.yml
LICENSES/: ALIKED  COLMAP  DISK  DeDoDe  LightGlue  ROMA  SRIF  SuperGlue_magicleap  SuperPoint_magicleap  SuperPoint_open  micmac  others
assets/: matches_joined.gif.REMOVED.git-id  matches_joined.mp4.REMOVED.git-id  matches_sift.gif.REMOVED.git-id  matches_sift.mp4.REMOVED.git-id  nadar_disk_matches.png.REMOVED.git-id  nadar_sift_matches.png.REMOVED.git-id  pairs.txt  roma_dense.gif.REMOVED.git-id  roma_dense.mp4.REMOVED.git-id  temple_rsift.gif.REMOVED.git-id  temple_superglue.gif.REMOVED.git-id
assets/example_cyprus/: cameras.yaml  config_roma.yaml  config_superpoint+lightglue.yaml
assets/example_easy_highres/: 01_Camera1.jpg.REMOVED.git-id  02_Camera1.jpg.REMOVED.git-id  03_Camera1.jpg.REMOVED.git-id  04_Camera1.jpg.REMOVED.git-id
assets/example_square/: 01_Camera4.jpg.REMOVED.git-id  02_Camera2.jpg.REMOVED.git-id  03_Camera2.jpg.REMOVED.git-id  04_Camera2.jpg.REMOVED.git-id  04_Camera4.jpg.REMOVED.git-id  05_Camera4.jpg.REMOVED.git-id  08_Camera4.jpg.REMOVED.git-id  11_Camera4.jpg.REMOVED.git-id  12_Camera3.jpg.REMOVED.git-id  14_Camera1.jpg.REMOVED.git-id  14_Camera3.jpg.REMOVED.git-id  15_Camera1.jpg.REMOVED.git-id  15_Camera3.jpg.REMOVED.git-id  16_Camera3.jpg.REMOVED.git-id  26_Camera2.jpg.REMOVED.git-id  27_Camera2.jpg.REMOVED.git-id  28_Camera2.jpg.REMOVED.git-id  29_Camera2.jpg.REMOVED.git-id  38_Camera1.jpg.REMOVED.git-id  40_Camera1.jpg.REMOVED.git-id  42_Camera1.jpg.REMOVED.git-id
assets/example_statue/: 20220122_153755.jpg.REMOVED.git-id  20220122_153810.jpg.REMOVED.git-id  20220122_153825.jpg.REMOVED.git-id  20220122_153840.jpg.REMOVED.git-id  20220122_153852.jpg.REMOVED.git-id  20220122_153902.jpg.REMOVED.git-id  20220122_153910.jpg.REMOVED.git-id  20220122_153918.jpg.REMOVED.git-id  20220122_153927.jpg.REMOVED.git-id  20220122_153943.jpg.REMOVED.git-id
assets/imgs/: IMG_9017.JPG.REMOVED.git-id  IMG_9018.JPG.REMOVED.git-id  IMG_9019.JPG.REMOVED.git-id  IMG_9020.JPG.REMOVED.git-id  LEO_8599_acr.jpg.REMOVED.git-id  LEO_8600_acr.jpg.REMOVED.git-id  LEO_8601_acr.jpg.REMOVED.git-id  LEO_8602_acr.jpg.REMOVED.git-id  LEO_8624_acr.jpg.REMOVED.git-id  LEO_8625_acr.jpg.REMOVED.git-id  LEO_8626_acr.jpg.REMOVED.git-id  LEO_8627_acr.jpg.REMOVED.git-id  p1.JPG.REMOVED.git-id
assets/output_roma/: features.h5  features.h5.REMOVED.git-id  matches.h5  matches.h5.REMOVED.git-id  pairs.txt  roma.db  roma.db.REMOVED.git-id
config/: aliked+lightglue.yaml  aliked.yaml  cameras.yaml  dedode+kornia_matcher.yaml  dedode.yaml  disk+lightglue.yaml  keynet.yaml  loftr.yaml  openmvg.yaml  openmvg_linux.yaml  openmvg_win.yaml  roma.yaml  rotations.txt  sift.yaml  superpoint+lightglue.yaml  superpoint+superglue.yaml
docs/: about.md  advanced_configuration.md  advanced_usage.md  agisoft_metashape.md  camera_models.md  colmap.md  config.md  examples.md  extractors.md  getting_started.md  image_matching.md  index.md  installation.md  io.md  matchers.md  micmac.md  openmvg.md  rotations.md  scripts.md  utils.md
lib/: export_to_colmap.py  image.py  image_list.py  image_matching.py  local_features.py  match_imgs.py  matcher.py  pairs_generator.py
lib/__pycache__/: match_imgs.py
lib/deep_image_matcher/: __init__.py  core.py  geometric_verification.py  logger.py  matchers.py  timer.py
ms/: run_casalbagliano.sh
notebooks/: colab_run_from_bash_custom_images.ipynb  colab_run_from_bash_example.ipynb  deep_image_matching_example.ipynb  extract_features.py  georeference_by_gcp.ipynb  run_dense_and_triangulate_pycolmap.ipynb  run_dense_pycolmap.ipynb  run_from_bash_custom_images.ipynb  run_from_bash_example.ipynb  sfm_pipeline.ipynb  sfm_pipeline_step_by_step.ipynb
res/: 01_Camera1.jpg.txt  02_Camera1.jpg.txt  03_Camera1.jpg.txt  04_Camera1.jpg.txt  colmap_matches.txt
res/superglue_matches/: keypoints_0.txt  keypoints_1.txt
scripts/: apply_masks.py  convert_images.py  copy_images_no_exif.py  database.py  deleate_static_matches.py  dense_matching.py  export_from_database.py  export_pairs_from_database.py  export_to_bundler.py  export_to_metashape.py  frames_from_video.py  globaldes_kmeans.py  join_databases.py  keypoint_density_evaluation.py  lidar_optimization.py  list_images.py  loftr_roma.py  micmac_utils.py  mount_video.py  normalize_images.py  prepare_images_for_triangulator.py  reconstruction_to_bunlder.py  resize_images.py  roma_as_dense.py  rotations_from_exif.py  run.bat  run.sh  run_openmvg.py  run_sfm+dense.sh  show_image.py  show_matches.py  show_matches_x1y1x2y2format.py  skip_x_images.py  temp.py  temp2.py  verified2raw_matches.py
scripts/metashape/: export_gcps_.py  metashape.py  metashape_from_dim.py  ms_utils.py  read_from_xml.py
scripts/misc/: write_tif_file.py
scripts/ms/: metashape.py  metashape_from_dim.py  ms_utils.py  run_casalbagliano.sh
scripts/temp/: deleate_static_matches.py  normalize_images_first_version.py  openMVG.py
src/deep_image_matching/: __init__.py  __main__.py  config.py  constants.py  consts.py  core.py  extractors.py  geometric_verification.py  graph.py  gui.py  image.py  (+15 more)
tests/: conftest.py  test_config.py  test_extractors.py  test_geom_verification.py  test_image.py  test_pipelines.py  test_tiling.py
(+90 files in other folders)
