[build-system]
requires      = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_image_matching"
version = "0.1.0"
description = "Multiview matching with deep-learning and hand-crafted local features for COLMAP and other SfM software."
readme = "README.md"
authors = [
    { name = "Francesco Ioli", email = "francesco.ioli@polimi.it" },
    { name = "Luca Morelli", email = "lmorelli@fbk.eu"}
]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: BSD-3-Clause license ",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "torch",
    "torchvision",
    "pillow",
    "pandas",
    "opencv-python",
    "opencv-contrib-python",
    "pydegensac",
    "kornia>=0.7.1",
    "h5py",
    "tqdm",
    "easydict",
    "pytest",
    "exifread",
    "joblib",
    "pyyaml",
    "packaging",
    "einops",    
]
requires-python = ">=3.8"


[project.optional-dependencies]
dev = ["flake8", "black", "bumpver", "isort", "pip-tools", "pytest", "mkdocs", "mkdocs-material", "mkdocstrings[python]", "pre-commit"]

[project.urls]
Homepage = "https://github.com/3DOM-FBK/deep-image-matching"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.isort]
profile = "black"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"', 
    'version = "{version}"'
]
"src/deep_image_matching/__init__.py" = [
    "{version}"
]
