[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-image-matching"
description = "Multiview matching with deep-learning and hand-crafted local features for COLMAP and other SfM software."
version = "2.0.0"
readme = "README.md"
authors = [
  { name = "Francesco Ioli", email = "francesco.ioli@polimi.it" },
  { name = "Luca Morelli", email = "lmorelli@fbk.eu" },
]
requires-python = ">=3.9"
keywords = [
  "image-matching",
  "deep-learning",
  "local-features",
  "multiview-matching",
  "sfm",
]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "torch",
  "torchvision",
  "pillow",
  "rasterio",
  "opencv-python",
  "opencv-contrib-python",
  "pydegensac==0.1.3; platform_system=='Windows' and platform_machine=='i386'",
  "pydegensac==0.1.2; platform_system=='Windows' and platform_machine=='AMD64'",
  "pydegensac==0.1.2; platform_system=='Linux'",
  "pydegensac==0.1.2; platform_system=='Darwin'",
  "kornia>=0.7.2",
  "h5py",
  "tqdm",
  "exifread",
  "joblib",
  "pyyaml",
  "packaging",
  "einops",
  "pyvis>=0.3.2",
  "yacs>=0.1.8",
  "e2cnn",
  "pytorch_lightning",
  "pytest",
  "pycolmap>=3.12.0",
  "ipykernel>=6.29.5",
  "ruff>=0.12.1",
  "enlighten>=1.14.1",
]

[project.optional-dependencies]
dev = [
  "bumpver",
  "pytest",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "pre-commit",
]

[project.urls]
Homepage = "https://github.com/3DOM-FBK/deep-image-matching"
Documentation = "https://3dom-fbk.github.io/deep-image-matching/"
Download = "https://github.com/3DOM-FBK/deep-image-matching"
"Source Code" = "https://github.com/3DOM-FBK/deep-image-matching"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_image_matching"]

[tool.hatch.version]
path = "src/deep_image_matching/__init__.py"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.bumpver]
current_version = "2.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/deep_image_matching/__init__.py" = ["{version}"]
